<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_convert_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMediationSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/meditation_sound"
                android:textColor="@color/convert_black_white"
                android:textSize="@dimen/_23ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMixture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/mixture"
                android:textColor="@color/convert_black_white"
                android:textSize="@dimen/_23ssp"
                app:layout_constraintStart_toStartOf="@+id/txtMediationSound"
                app:layout_constraintTop_toBottomOf="@+id/txtMediationSound" />

            <TextView
                android:id="@+id/txtRelaxation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/discover_relaxation"
                android:textColor="@color/convert_black_white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/txtMixture"
                app:layout_constraintTop_toBottomOf="@+id/txtMixture" />

            <TextView
                android:id="@+id/txtSoundWithUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_with_us"
                android:textColor="@color/convert_black_white"
                app:layout_constraintStart_toStartOf="@+id/txtRelaxation"
                app:layout_constraintTop_toBottomOf="@+id/txtRelaxation" />

            <TextView
                android:id="@+id/txtNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/newimage"
                android:textColor="@color/convert_black_white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/txtSoundWithUs"
                app:layout_constraintTop_toBottomOf="@+id/txtSoundWithUs" />

            <TextView
                android:id="@+id/mostlisten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_54sdp"
                android:text="@string/most_listen"
                android:textColor="@color/lightcolor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/txtNew"
                app:layout_constraintStart_toEndOf="@+id/txtNew" />

            <SearchView
                android:id="@+id/search_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:contentDescription="@string/no_pic"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_search"
                app:iconifiedByDefault="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSoundWithUs"
                app:tint="@color/convert_black_white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_50sdp"
                android:paddingEnd="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_View" />

<!--            <ImageView-->
<!--                android:id="@+id/home_ic"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="@dimen/_5sdp"-->
<!--                android:contentDescription="@string/no_pic"-->
<!--                android:padding="@dimen/_9sdp"-->
<!--                android:src="@drawable/home_ic"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintWidth_percent="0.5" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
