<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_design"
    android:fitsSystemWindows="true"
    android:padding="@dimen/_10sdp"
    android:theme="@style/BottomSheetDialogTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/kbTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/do_you_want_to_exit"
                android:textColor="?attr/alternative_black_and_white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/selected_tab"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:fontFamily="@font/poppins_semibold"
                app:cornerRadius="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/exitBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kbTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exitBtn"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/selected_tab"
                android:elevation="@dimen/_4sdp"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelBtn"
                app:layout_constraintTop_toBottomOf="@id/kbTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>